--- a/20-debug-labels/Makefile
+++ b/20-debug-labels/Makefile
@@ -2,7 +2,7 @@ BIN=debug-labels
 all: ${BIN}
 
 ${BIN}: ${BIN}.cpp
-	clang++ -g $< `llvm-config --cxxflags --ldflags --system-libs --libs core` -o $@
+	clang++ -g $< `llvm-config --cxxflags --ldflags --system-libs --libs core native` -o $@
 
 clean:
 	rm -f ${BIN}
